--- a/.classpath
+++ b/.classpath
@@ -23,9 +23,23 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/vishnupriya/Downloads/jar_files (2)/webdrivermanager-5.5.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/vishnupriya/Downloads/gridnane/selenium-server-4.9.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/vishnupriya/Downloads/jar_files (2)/commons-io-2.6.jar"/>
-	<classpathentry kind="lib" path="C:/Users/vishnupriya/Downloads/chromedriver_win32 new.zip"/>
+	<classpathentry kind="lib" path="/Users/gmx/Downloads/webdrivermanager-5.5.3.jar"/>
+	<classpathentry kind="lib" path="/Users/gmx/Downloads/commons-io-2.15.1.jar"/>
+	<classpathentry kind="lib" path="/Users/gmx/Downloads/selenium-server-3.141.59.jar"/>
+	<classpathentry excluding="**" kind="src" output="target/classes" path="src/main/resources">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="optional" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry excluding="**" kind="src" output="target/test-classes" path="src/test/resources">
+		<attributes>
+			<attribute name="test" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="optional" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/Users/gmx/Downloads/chromedriver-mac-x64.zip"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
